fix msg banner spacing and padding

--- a/lms/static/sass/elements/_system-feedback.scss
+++ b/lms/static/sass/elements/_system-feedback.scss
@@ -117,11 +117,12 @@
   &.recovery-email-alert,
   &.learner-portal-enabled-alert {
     &#banner-msg {
+      position: relative;
+      top: -10px;
+      padding: 20px 40px;
       background: $state-info-bg;
       box-shadow: none;
       border-top: 1px solid #579cc5;
-      padding: 20px 20px 20px 40px;
-      margin: -16px 0 10px 0;
     }
 
     .fa-close {
@@ -131,6 +132,12 @@
 
     .fa-close:hover {
       cursor: pointer;
+    }
+  }
+
+  &.learner-portal-enabled-alert {
+    &#banner-msg {
+      margin-bottom: 10px;
     }
   }
 
